# rasp_compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  prompt.md
docs/: 01_architecture.md  02_frontend.md  03_high_level_ir.md  04_low_level_ir.md  05_pass_manager.md  06_optimization_passes.md  07_lowering.md  08_codegen.md  README.md
include/: ir_node.h  parse_cmd.h  type.h
include/codegen/: codegen.h
include/driver/: compiler_driver.h
include/high_level_ir/: expr.h  hl_expr_mutator.h  hl_expr_visitor.h  hl_ir.h  ir_module.h  ir_node.h  op.h  type.h
include/low_level_ir/: buffer.h  ll_expr_mutator.h  ll_expr_visitor.h  ll_ir.h  ll_ir_module.h  prim_expr.h  prim_func.h  stmt.h
include/lowering/: lowering.h  op_lowering_rules.h
include/pass/: pass.h  pass_context.h  pass_manager.h  pass_pipeline.h
include/pass/analysis/: type_inference.h
include/pass/opt/: constant_folding.h  dead_code_elimination.h  operator_fusion.h  opt_pass.h
include/runtime/: reference_runtime.h  runtime.h  tensor.h
include/utils/: log.h  utils.h
src/: rpc.cpp
src/codegen/: codegen.cpp
src/driver/: compiler_driver.cpp
src/frontend/: onnx_config.py  parser.py
src/high_level_ir/: hl_expr_mutator.cpp  hl_expr_visitor.cpp  ir_module.cpp  op.cpp  op_registry_init.cpp
src/low_level_ir/: buffer.cpp  ll_expr_mutator.cpp  ll_expr_visitor.cpp  stmt.cpp
src/lowering/: lowering.cpp  op_lowering_rules.cpp
src/pass/: pass_manager.cpp
src/pass/analysis/: type_inference.cpp
src/pass/opt/: constant_folding.cpp  dead_code_elimination.cpp  operator_fusion.cpp
src/runtime/: reference_runtime.cpp  runtime.cpp  tensor.cpp
tests/: CMakeLists.txt
tests/codegen_runtime/: CMakeLists.txt  test_codegen_runtime.cpp
tests/frontend/: tiny_onnx_gen.py  tiny_smoke.onnx
tests/lowering/: CMakeLists.txt  test_lowering.cpp
tests/opt_pass/: CMakeLists.txt  test_opt_pass.cpp
tests/type_inference/: CMakeLists.txt  test_type_inference.cpp
tools/: cmp_json.py
